--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -49,12 +49,17 @@ aside#sidebar a:hover {
 /* top user navigation */
 ul#navigationUser li a {
   color: #65C18C;
-  font-weight: bold;
+  /* font-weight: bold; */
+  /* color: #fff; */
 }
 
 div.navbar-header :is(h1, div).site-name {
   position: absolute;
   top: 0.5em;
+}
+
+div.navbar-header div.site-name {
+  top: 1.2em;
 }
 
 div.navbar-header :is(h1, div).site-name a.navbar-brand-logo {
@@ -102,12 +107,12 @@ nav#nav-menu {
 
 ul#main-navigation > li > a, .header_view .nav > li > a {
   color: #fff;
-  font-weight: bold;
+  /* font-weight: bold; */
   border: none;
 }
 
 ul#main-navigation > li > a:hover, ul#main-navigation > li.open > a {
-  background-color: #65C18C;
+  /* background-color: #65C18C; */
   color: #fff;
   border: none;
 }
@@ -128,6 +133,12 @@ header nav#nav-menu div.pull-md-right {
   display: none;
 }
 
+/* Hide breadcrumbs */
+
+nav.cmp_breadcrumbs {
+  display: none;
+}
+
 /* main container */
 
 main.pkp_structure_main {
@@ -139,9 +150,23 @@ main.pkp_structure_main {
 }
 
 main.pkp_structure_main div#main-content, div.content, div.page_privacy, footer.footer {
-  font: 1.1em/1.6em "Overpass", "Open Sans", Helvetica, sans-serif;
+  font: 1.0em/1.6em "Overpass", "Open Sans", Helvetica, sans-serif;
   color: #333;
   font-weight: 300;
+}
+
+/* Fix page headers */
+
+div.page-header {
+  padding: 0;
+  margin: 0;
+  border: none;
+}
+
+:is(div.page-header, div.page) h1 {
+  padding-bottom: 10px;
+  margin: 44px 0 22px;
+  border-bottom: 1px solid #ddd;
 }
 
 
